<resources>
    <string name="app_name">LeagueBuddy</string>
    <string name="welcome_to_the"><font color='#4A65EC'>Welcome</font> to the</string>
    <string name="league_buddy">League <font color='#4A65EC'>Buddy</font></string>
    <string name="password">Password...</string>
    <string name="repeat_password">Repeat password....</string>
    <string name="username">Username...</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discord">Discord</string>
    <string name="please_fill_in_your_discord_username_so_our_bot_can_communicate_with_you">Please fill in your Discord username so our bot can communicate with you.</string>
    <string name="username_1234">Username#1234</string>
    <string name="leagueDiscription">Please fill in your League of Legends username so we can provide you with the best statistics.</string>
    <string name="league_of_legends">League of Legends</string>
    <string name="back">back</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="text">text</string>
    <string name="date">date</string>
    <string name="date_placeholder">Date placeholder</string>
    <string name="text_placeholder">News item text placeholder</string>
    <string name="title_placeholder">Title placeholder</string>
    <string name="email">Email...</string>
    <string name="your_leaguebuddies">Your leaguebuddies</string>
    <string name="leaguebuddies">leaguebuddies</string>
    <string name="your">Your</string>
    <string name="friends">Friends</string>
    <string name="below_you_see_all_your_friends_you_have_a_connection_with">Below you see all your friends you have a connection with.</string>
    <string name="friend_name">Friend_name</string>
    <string name="Your">Your</string>
    <string name="Leaguebuddies">Leaguebuddies</string>
    <string name="Friends">Friends</string>
    <string name="Below_you_see_all_your_friends_you_have_a_connection_with">Below you see all your friends you have a connection with</string>
    <string name="FriendsButton">Friends</string>
    <string name="Received_request">Received</string>
    <string name="Outgoing_request">Outgoing</string>
    <string name="Below_you_see_all_your_receieved_friendrequests">Below you see all your received friendrequests</string>
    <string name="Below_you_see_all_your_friends_you_want_to_have_a_connection_with">Below you see all your outgoing friend requests</string>
    <string name="send_request">Send friendrequest</string>
    <string name="Username_leaguebuddy">Username(leaguebuddy)</string>
    <string name="Your_soon_to_be_friend">your soon to be friend</string>
    <string name="Send">Send</string>
    <string name="Cancel">Cancel</string>
    <string name="You_want_to_be_leaguebuddies">You want to be leaguebuddies</string>
    <string name="Wants_to_be">Wants_to_be</string>
</resources>
