<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.FriendsFragment">

    <!-- TODO: Update buttons to send -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="40dp">

            <TextView
                android:id="@+id/title_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wants_to_be"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/title_friends2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Leaguebuddies"
                android:textColor="#4A65EC"
                android:textSize="30sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Friends"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Below_you_see_all_your_receieved_friendrequests"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"></FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/friends_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FriendsButton"
                    android:background="#4A65EC"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/received_request_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Received_request"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/outgoing_request_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Outgoing_request"
                    android:padding="8dp"
                    android:background="#4A65EC"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>