<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.FriendsFragment">

    <!-- TODO:fix -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="40dp">

            <TextView
                android:id="@+id/title_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/You_want_to_be_leaguebuddies"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/title_friends2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Leaguebuddies"
                android:textColor="#4A65EC"
                android:textSize="30sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Username_leaguebuddy"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textColor="@color/white"/>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/etUserName"
                    style="@style/inputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/Your_soon_to_be_friend" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/friends_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Send"
                    android:padding="8dp"
                    android:background="#4A65EC"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/received_request_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>