<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.FriendsFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <LinearLayout
            android:id="@+id/llTItle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/your"
                android:textAlignment="center"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tvTitleBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leaguebuddies"
                android:textAlignment="center"
                android:textColor="@color/blueAccent"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUnderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvFriendsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFriendsUnderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/below_you_see_all_your_friends_you_have_a_connection_with"
                android:textColor="@color/underTitle" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</FrameLayout>